syntax = "proto3";

package insole.app.stock;

option java_multiple_files = true;
option java_package = "com.sennotech.sennofit.insole.app.stock.generated";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

// 商品服务
service StockService {
    rpc UpdateStock (UpdateStockRequest) returns (UpdateStockResponse) {
        option (google.api.http) = {
            put: "/insole.app.stock.StockService/UpdateStock"
        };
    };

    rpc Stock (StockRequest) returns (StockResponse) {
        option (google.api.http) = {
            get: "/insole.app.stock.StockService/Stock"
        };
    };
}

message UpdateStockRequest {
    UpdateStockDetail updateStockRequest = 1;
}

message UpdateStockDetail {
    int32 number = 1;
}

message UpdateStockResponse {
}

message StockRequest {
}

message StockResponse {
    int32 stock = 1;
}